the-modern-jukebox-react-app/src/pages/queue/index.css
.buttonsContainer{
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 100%;
    padding-left: 5vw;
    padding-right: 5vw;
    margin-top: 40px;
}

.queueButton{
    margin: 10px;
}

.queueButton:hover{
    transform: translateY(-5px);
    color: #e07b00;
}

.queueButtonText{
    margin-left: 15px;
}

.icon-large{
    font-size: 30px;
}

.queueContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
    padding: 0;
    margin: 0;
}

.itemContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    width: 90vw;
    height: 100%;
    padding: 50px;
    background-color: #2e0e0d;
}

.itemContainerWrapper{
    overflow: hidden;
    border-radius: 10px;
    margin: 30px;
    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
}

.coverart{
    width: 400px;
    height: 400px;
    border-radius: 10px;
}

.coverart:hover{
    box-shadow: 0 0 10px 0 rgba(0,0,0,0.99);
    transform: translateY(-10px);
}

.tracktext:hover + .coverart {
    box-shadow: 0 0 10px 0 rgba(0,0,0,0.99);
    transform: translateY(-10px);
}

.item{
    width: 400px;
    flex-shrink: 0;
    margin-left: 50px;
}

@media (max-width: 768px) {

    .buttonsContainer {
        margin-top: 0;
        justify-content: center;
    }

    .queueButtonText {
        display: none;
    }

    .queueContainer {
        display: flex;
        align-items: center;
        padding: 0;
        width: 100%;
    }

    .itemContainer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 20px;
        width: 100%;
    }

    .itemContainerWrapper {
        margin: 10px;
        width: 90%;
    }

    .coverart {
        width: 200px;
        height: 200px;
    }

    .item {
        width: 100%;
        margin-left: 0;
    }
    .coverartContainer{
        display: flex;
        justify-content: center;
        align-items: center;
        margin-top: 20px;
    }

    .py-16{
        width: 100%;
    }
    .mobileContainer{
        width: 100%;
    }
}

